<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_Complex_3" Id="{51fc6d2e-a22b-4d19-a65f-040220552a5e}">
    <Declaration><![CDATA[{attribute 'OPC.UA.DA' := '1'}
{attribute 'OPC.UA.DA.StructuredType' := '1'}
{attribute 'OPC.UA.AdditionalStructuredType.NamespaceName' := 'http://beckhoff.com/UA/TE6100_OpcUa_NodesetEditor_Sample_Types/'}
{attribute 'OPC.UA.AdditionalStructuredType.Id' := 's=<StructuredDataType>:ST_Complex_3'}
{attribute 'pack_mode' := '1'}
TYPE ST_Complex_3 :
STRUCT
	{attribute 'OPC.UA.DA.StructuredType' := '1'}
	{attribute 'OPC.UA.AdditionalStructuredType.NamespaceName' := 'http://beckhoff.com/UA/TE6100_OpcUa_NodesetEditor_Sample_Types/'}
	{attribute 'OPC.UA.AdditionalStructuredType.Id' := 's=<StructuredDataType>:AMSADDR'}
	stAmsAddr : ST_AmsAddr;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>